# HelloWorldNoLibInclude

./: CMakeLists.txt  README.md
